// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipient Verification Actions .getJobStatus when getting status of a list job 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "v1/recipient-validation/job/12345",
    },
    "type": "GET_JOB_STATUS",
  },
]
`;

exports[`Recipient Verification Actions .getLatestJob when getting latest list upload 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "v1/recipient-validation/latest",
    },
    "type": "GET_LATEST_JOB",
  },
]
`;

exports[`Recipient Verification Actions .singleAddress when verifying a single address 1`] = `
Array [
  Object {
    "meta": Object {
      "email": Object {
        "address": "foo@bar.com",
      },
      "method": "GET",
      "url": "v1/recipient-validation/single/[object Object]",
    },
    "type": "SINGLE_RECIPIENT_VALIDATION",
  },
]
`;

exports[`Recipient Verification Actions .uploadList when uploading csv 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "data": "csv-file",
      },
      "method": "POST",
      "url": "v1/recipient-validation",
    },
    "type": "UPLOAD_RECIPIENT_VALIDATION_LIST",
  },
]
`;
